sqc con confronto classifici

--- a/qvc.ipynb
+++ b/qvc.ipynb
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,12 +562,12 @@
     "    # Print ROC AUC score for test set\n",
     "    print(f\"ROC AUC Score for {feature_map_name} Feature Map (Test Set):\")\n",
     "    print(round(roc_auc_score(y_test_np, y_test_pred), 2))\n",
-    "    print(\"\\n\\n\")"
+    "    print(70*'=')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -608,9 +608,7 @@
       " [21 10]]\n",
       "ROC AUC Score for Z Feature Map (Test Set):\n",
       "0.56\n",
-      "\n",
-      "\n",
-      "\n",
+      "======================================================================\n",
       "Evaluating performance for ZZ Feature Map:\n",
       "\n",
       "Classification Report for ZZ Feature Map (Train Set):\n",
@@ -645,9 +643,7 @@
       " [15 16]]\n",
       "ROC AUC Score for ZZ Feature Map (Test Set):\n",
       "0.67\n",
-      "\n",
-      "\n",
-      "\n",
+      "======================================================================\n",
       "Evaluating performance for P Feature Map:\n",
       "\n",
       "Classification Report for P Feature Map (Train Set):\n",
@@ -682,9 +678,7 @@
       " [22  9]]\n",
       "ROC AUC Score for P Feature Map (Test Set):\n",
       "0.58\n",
-      "\n",
-      "\n",
-      "\n"
+      "======================================================================\n"
      ]
     }
    ],
@@ -696,6 +690,198 @@
     "    \n",
     "    # Perform predictions and evaluate performance metrics\n",
     "    evaluate_with_feature_map(vqc_model, X_train, y_train_np, X_test, y_test_np, feature_map_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we try different classical machine learning models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "                     LogisticRegression() \n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.75      0.85      0.79        71\n",
+      "           1       0.82      0.71      0.76        69\n",
+      "\n",
+      "    accuracy                           0.78       140\n",
+      "   macro avg       0.78      0.78      0.78       140\n",
+      "weighted avg       0.78      0.78      0.78       140\n",
+      "\n",
+      "Confusion Matrix for Train Set:\n",
+      "[[60 11]\n",
+      " [20 49]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.97      0.90        29\n",
+      "           1       0.96      0.84      0.90        31\n",
+      "\n",
+      "    accuracy                           0.90        60\n",
+      "   macro avg       0.91      0.90      0.90        60\n",
+      "weighted avg       0.91      0.90      0.90        60\n",
+      "\n",
+      "Confusion Matrix for Test Set:\n",
+      "[[28  1]\n",
+      " [ 5 26]]\n",
+      "ROC AUC Score (Test Set):\n",
+      "0.9\n",
+      "======================================================================\n",
+      "                     MLPClassifier() \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edoardozappia/opt/anaconda3/envs/qiskit-stable/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.85      0.79        71\n",
+      "           1       0.81      0.70      0.75        69\n",
+      "\n",
+      "    accuracy                           0.77       140\n",
+      "   macro avg       0.78      0.77      0.77       140\n",
+      "weighted avg       0.78      0.77      0.77       140\n",
+      "\n",
+      "Confusion Matrix for Train Set:\n",
+      "[[60 11]\n",
+      " [21 48]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.97      0.90        29\n",
+      "           1       0.96      0.84      0.90        31\n",
+      "\n",
+      "    accuracy                           0.90        60\n",
+      "   macro avg       0.91      0.90      0.90        60\n",
+      "weighted avg       0.91      0.90      0.90        60\n",
+      "\n",
+      "Confusion Matrix for Test Set:\n",
+      "[[28  1]\n",
+      " [ 5 26]]\n",
+      "ROC AUC Score (Test Set):\n",
+      "0.9\n",
+      "======================================================================\n",
+      "                     SVC() \n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.75      0.86      0.80        71\n",
+      "           1       0.83      0.71      0.77        69\n",
+      "\n",
+      "    accuracy                           0.79       140\n",
+      "   macro avg       0.79      0.78      0.78       140\n",
+      "weighted avg       0.79      0.79      0.78       140\n",
+      "\n",
+      "Confusion Matrix for Train Set:\n",
+      "[[61 10]\n",
+      " [20 49]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.97      0.88        29\n",
+      "           1       0.96      0.77      0.86        31\n",
+      "\n",
+      "    accuracy                           0.87        60\n",
+      "   macro avg       0.88      0.87      0.87        60\n",
+      "weighted avg       0.88      0.87      0.87        60\n",
+      "\n",
+      "Confusion Matrix for Test Set:\n",
+      "[[28  1]\n",
+      " [ 7 24]]\n",
+      "ROC AUC Score (Test Set):\n",
+      "0.87\n",
+      "======================================================================\n",
+      "                     RandomForestClassifier() \n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        71\n",
+      "           1       1.00      1.00      1.00        69\n",
+      "\n",
+      "    accuracy                           1.00       140\n",
+      "   macro avg       1.00      1.00      1.00       140\n",
+      "weighted avg       1.00      1.00      1.00       140\n",
+      "\n",
+      "Confusion Matrix for Train Set:\n",
+      "[[71  0]\n",
+      " [ 0 69]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.97      0.92        29\n",
+      "           1       0.96      0.87      0.92        31\n",
+      "\n",
+      "    accuracy                           0.92        60\n",
+      "   macro avg       0.92      0.92      0.92        60\n",
+      "weighted avg       0.92      0.92      0.92        60\n",
+      "\n",
+      "Confusion Matrix for Test Set:\n",
+      "[[28  1]\n",
+      " [ 4 27]]\n",
+      "ROC AUC Score (Test Set):\n",
+      "0.92\n",
+      "======================================================================\n",
+      "CPU times: user 1.04 s, sys: 356 ms, total: 1.4 s\n",
+      "Wall time: 443 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "def train_test(ML_model):\n",
+    "    print(20*' ', ML_model,'\\n')\n",
+    "    ML_model.fit(X_train, y_train_np)                         \n",
+    "    \n",
+    "    y_train_pred = ML_model.predict(X_train)       \n",
+    "    y_test_pred = ML_model.predict(X_test)\n",
+    "    \n",
+    "    \n",
+    "    print(classification_report(y_train_np, y_train_pred))\n",
+    "    print(\"Confusion Matrix for Train Set:\")    \n",
+    "    print(confusion_matrix(y_train_np, y_train_pred))\n",
+    "\n",
+    "    print(classification_report(y_test_np, y_test_pred))\n",
+    "    print(\"Confusion Matrix for Test Set:\")\n",
+    "    print(confusion_matrix(y_test_np, y_test_pred))\n",
+    "    print(f\"ROC AUC Score (Test Set):\")\n",
+    "    print(round(roc_auc_score(y_test_np, y_test_pred),2))\n",
+    "    \n",
+    "    print(70*'=')\n",
+    "    \n",
+    "print(70*'=')\n",
+    "ML_model = linear_model.LogisticRegression()         \n",
+    "train_test(ML_model)\n",
+    "\n",
+    "\n",
+    "ML_model = MLPClassifier()                            \n",
+    "train_test(ML_model)\n",
+    "\n",
+    "\n",
+    "ML_model = svm.SVC() \n",
+    "train_test(ML_model)\n",
+    "\n",
+    "\n",
+    "ML_model = RandomForestClassifier()\n",
+    "train_test(ML_model)\n"
    ]
   }
  ],
